--- a/results/classifica.html
+++ b/results/classifica.html
@@ -1,143 +1,123 @@
 <html><head><title>Classifica dei Simboli</title></head><body>
 <h1>Classifica dei Simboli in Base alla Probabilità di Crescita</h1>
 <table border='1'><tr><th>Simbolo</th><th>Probabilità</th></tr>
-<tr><td>FIS</td><td>99.98%</td></tr>
-<tr><td>INTU</td><td>99.94%</td></tr>
-<tr><td>AUDCAD</td><td>99.93%</td></tr>
-<tr><td>AUDJPY</td><td>99.93%</td></tr>
-<tr><td>EURJPY</td><td>99.93%</td></tr>
-<tr><td>RBUSD</td><td>99.91%</td></tr>
-<tr><td>CADJPY</td><td>99.86%</td></tr>
-<tr><td>LINKUSD</td><td>99.86%</td></tr>
-<tr><td>GBPJPY</td><td>99.86%</td></tr>
-<tr><td>GBPJPY</td><td>99.86%</td></tr>
-<tr><td>MSFT</td><td>99.85%</td></tr>
-<tr><td>QCOM</td><td>99.80%</td></tr>
-<tr><td>CHFJPY</td><td>99.80%</td></tr>
-<tr><td>EURCHF</td><td>99.59%</td></tr>
-<tr><td>ATOMUSD</td><td>99.50%</td></tr>
-<tr><td>ETCUSD</td><td>99.40%</td></tr>
-<tr><td>ADAUSD</td><td>99.37%</td></tr>
-<tr><td>NEOUSD</td><td>99.36%</td></tr>
-<tr><td>GBPUSD</td><td>99.22%</td></tr>
-<tr><td>TMUS</td><td>99.20%</td></tr>
-<tr><td>NZDUSD</td><td>99.16%</td></tr>
-<tr><td>XRPUSD</td><td>99.12%</td></tr>
-<tr><td>BCHUSD</td><td>99.08%</td></tr>
-<tr><td>ADBE</td><td>98.99%</td></tr>
-<tr><td>V</td><td>98.97%</td></tr>
-<tr><td>NKE</td><td>98.96%</td></tr>
-<tr><td>CTUSX</td><td>98.89%</td></tr>
-<tr><td>EURCAD</td><td>98.82%</td></tr>
-<tr><td>PYPL</td><td>98.81%</td></tr>
-<tr><td>EURUSD</td><td>98.80%</td></tr>
-<tr><td>ZTS</td><td>98.75%</td></tr>
-<tr><td>FDX</td><td>98.74%</td></tr>
-<tr><td>XMRUSD</td><td>98.68%</td></tr>
-<tr><td>AUDUSD</td><td>98.66%</td></tr>
-<tr><td>EOSUSD</td><td>98.62%</td></tr>
-<tr><td>COST</td><td>98.42%</td></tr>
-<tr><td>TRXUSD</td><td>98.37%</td></tr>
-<tr><td>XTZUSD</td><td>98.26%</td></tr>
-<tr><td>SCHW</td><td>98.00%</td></tr>
-<tr><td>TSLA</td><td>97.79%</td></tr>
-<tr><td>WMT</td><td>97.72%</td></tr>
-<tr><td>ADI</td><td>97.72%</td></tr>
-<tr><td>SBUX</td><td>97.64%</td></tr>
-<tr><td>GOOGL</td><td>97.63%</td></tr>
-<tr><td>TGT</td><td>97.55%</td></tr>
-<tr><td>ACN</td><td>97.41%</td></tr>
-<tr><td>ZECUSD</td><td>97.32%</td></tr>
-<tr><td>XLMUSD</td><td>97.19%</td></tr>
-<tr><td>ETHUSD</td><td>97.17%</td></tr>
-<tr><td>EW</td><td>97.14%</td></tr>
-<tr><td>CAT</td><td>97.01%</td></tr>
-<tr><td>DE</td><td>97.01%</td></tr>
-<tr><td>META</td><td>96.66%</td></tr>
-<tr><td>AXP</td><td>96.58%</td></tr>
-<tr><td>LNTH</td><td>96.50%</td></tr>
-<tr><td>DASHUSD</td><td>96.24%</td></tr>
-<tr><td>EURGBP</td><td>96.18%</td></tr>
-<tr><td>JPM</td><td>96.17%</td></tr>
-<tr><td>NVDA</td><td>96.07%</td></tr>
-<tr><td>NRG</td><td>96.06%</td></tr>
-<tr><td>AON</td><td>96.03%</td></tr>
-<tr><td>XAGUSD</td><td>95.91%</td></tr>
-<tr><td>LTCUSD</td><td>95.44%</td></tr>
-<tr><td>GS</td><td>95.21%</td></tr>
-<tr><td>MS</td><td>95.20%</td></tr>
-<tr><td>ORCL</td><td>94.08%</td></tr>
-<tr><td>BNBUSD</td><td>92.95%</td></tr>
-<tr><td>BKNG</td><td>92.71%</td></tr>
-<tr><td>AMZN</td><td>91.21%</td></tr>
-<tr><td>NOW</td><td>90.43%</td></tr>
-<tr><td>NFLX</td><td>86.84%</td></tr>
-<tr><td>BTDR</td><td>86.61%</td></tr>
-<tr><td>CRM</td><td>83.40%</td></tr>
-<tr><td>CCUSD</td><td>12.28%</td></tr>
-<tr><td>BTCUSD</td><td>11.78%</td></tr>
-<tr><td>TJX</td><td>10.80%</td></tr>
-<tr><td>AAPL</td><td>7.99%</td></tr>
-<tr><td>ICE</td><td>5.08%</td></tr>
-<tr><td>ADP</td><td>4.68%</td></tr>
-<tr><td>USDCAD</td><td>4.65%</td></tr>
-<tr><td>OJUSX</td><td>4.55%</td></tr>
-<tr><td>USB</td><td>4.39%</td></tr>
-<tr><td>DOGEUSD</td><td>3.88%</td></tr>
-<tr><td>GBPCHF</td><td>3.84%</td></tr>
-<tr><td>LMT</td><td>3.82%</td></tr>
-<tr><td>EL</td><td>3.76%</td></tr>
-<tr><td>LLY</td><td>3.67%</td></tr>
-<tr><td>PFE</td><td>3.59%</td></tr>
-<tr><td>D</td><td>3.58%</td></tr>
-<tr><td>SO</td><td>3.57%</td></tr>
-<tr><td>BDX</td><td>3.53%</td></tr>
-<tr><td>T</td><td>3.29%</td></tr>
-<tr><td>XAUUSD</td><td>3.24%</td></tr>
-<tr><td>LOW</td><td>3.05%</td></tr>
-<tr><td>DIS</td><td>2.97%</td></tr>
-<tr><td>ZSUSX</td><td>2.92%</td></tr>
-<tr><td>USDJPY</td><td>2.89%</td></tr>
-<tr><td>CVS</td><td>2.45%</td></tr>
-<tr><td>ITW</td><td>2.29%</td></tr>
-<tr><td>KO</td><td>2.28%</td></tr>
-<tr><td>GCUSD</td><td>2.02%</td></tr>
-<tr><td>IBM</td><td>1.96%</td></tr>
-<tr><td>ZCUSX</td><td>1.88%</td></tr>
-<tr><td>SYK</td><td>1.83%</td></tr>
-<tr><td>NIO</td><td>1.77%</td></tr>
-<tr><td>GM</td><td>1.39%</td></tr>
-<tr><td>AMGN</td><td>1.12%</td></tr>
-<tr><td>EURNZD</td><td>0.97%</td></tr>
-<tr><td>SCHL</td><td>0.96%</td></tr>
-<tr><td>CME</td><td>0.87%</td></tr>
-<tr><td>PNC</td><td>0.86%</td></tr>
-<tr><td>TROW</td><td>0.84%</td></tr>
-<tr><td>GE</td><td>0.83%</td></tr>
-<tr><td>INTC</td><td>0.80%</td></tr>
-<tr><td>HD</td><td>0.77%</td></tr>
-<tr><td>CSCO</td><td>0.75%</td></tr>
-<tr><td>MRK</td><td>0.74%</td></tr>
-<tr><td>MCD</td><td>0.67%</td></tr>
-<tr><td>PEP</td><td>0.67%</td></tr>
-<tr><td>AEP</td><td>0.51%</td></tr>
-<tr><td>C</td><td>0.50%</td></tr>
-<tr><td>MMC</td><td>0.48%</td></tr>
-<tr><td>CL</td><td>0.46%</td></tr>
-<tr><td>APD</td><td>0.45%</td></tr>
-<tr><td>DUK</td><td>0.44%</td></tr>
-<tr><td>HON</td><td>0.39%</td></tr>
-<tr><td>CVX</td><td>0.31%</td></tr>
-<tr><td>XOM</td><td>0.29%</td></tr>
-<tr><td>EURAUD</td><td>0.29%</td></tr>
-<tr><td>USDCHF</td><td>0.29%</td></tr>
-<tr><td>BMY</td><td>0.28%</td></tr>
-<tr><td>NAAS</td><td>0.27%</td></tr>
-<tr><td>PLD</td><td>0.24%</td></tr>
-<tr><td>ABT</td><td>0.18%</td></tr>
-<tr><td>PSA</td><td>0.10%</td></tr>
-<tr><td>HE</td><td>0.04%</td></tr>
-<tr><td>JNJ</td><td>0.04%</td></tr>
-<tr><td>NSC</td><td>0.01%</td></tr>
-<tr><td>USDTUSD</td><td>0.00%</td></tr>
+<tr><td>ANTM</td><td>100.00%</td></tr>
+<tr><td>BRK.A</td><td>100.00%</td></tr>
+<tr><td>ETCUSD</td><td>100.00%</td></tr>
+<tr><td>INTU</td><td>100.00%</td></tr>
+<tr><td>TMUS</td><td>100.00%</td></tr>
+<tr><td>XMRUSD</td><td>100.00%</td></tr>
+<tr><td>MDT</td><td>99.96%</td></tr>
+<tr><td>NEE</td><td>99.93%</td></tr>
+<tr><td>EURJPY</td><td>99.81%</td></tr>
+<tr><td>BLK</td><td>99.50%</td></tr>
+<tr><td>BNBUSD</td><td>99.50%</td></tr>
+<tr><td>GBPJPY</td><td>99.50%</td></tr>
+<tr><td>MO</td><td>99.50%</td></tr>
+<tr><td>DASHUSD</td><td>99.50%</td></tr>
+<tr><td>ZECUSD</td><td>99.48%</td></tr>
+<tr><td>VZ</td><td>99.48%</td></tr>
+<tr><td>MSFT</td><td>99.43%</td></tr>
+<tr><td>AUDUSD</td><td>99.00%</td></tr>
+<tr><td>WMT</td><td>99.00%</td></tr>
+<tr><td>NOW</td><td>98.94%</td></tr>
+<tr><td>BKNG</td><td>98.91%</td></tr>
+<tr><td>FIS</td><td>98.48%</td></tr>
+<tr><td>NZDUSD</td><td>98.00%</td></tr>
+<tr><td>ORCL</td><td>97.93%</td></tr>
+<tr><td>NKE</td><td>97.92%</td></tr>
+<tr><td>QCOM</td><td>97.89%</td></tr>
+<tr><td>META</td><td>97.48%</td></tr>
+<tr><td>EURUSD</td><td>97.48%</td></tr>
+<tr><td>PYPL</td><td>97.18%</td></tr>
+<tr><td>AMZN</td><td>96.94%</td></tr>
+<tr><td>NFLX</td><td>96.00%</td></tr>
+<tr><td>GS</td><td>95.92%</td></tr>
+<tr><td>NVDA</td><td>95.78%</td></tr>
+<tr><td>ZTS</td><td>95.53%</td></tr>
+<tr><td>TGT</td><td>95.30%</td></tr>
+<tr><td>EURGBP</td><td>95.00%</td></tr>
+<tr><td>TSLA</td><td>94.50%</td></tr>
+<tr><td>BA</td><td>93.92%</td></tr>
+<tr><td>GBPUSD</td><td>93.42%</td></tr>
+<tr><td>DE</td><td>93.11%</td></tr>
+<tr><td>NRG</td><td>93.03%</td></tr>
+<tr><td>V</td><td>92.75%</td></tr>
+<tr><td>EW</td><td>90.45%</td></tr>
+<tr><td>FDX</td><td>89.45%</td></tr>
+<tr><td>ADI</td><td>87.73%</td></tr>
+<tr><td>GOOGL</td><td>87.50%</td></tr>
+<tr><td>PM</td><td>87.25%</td></tr>
+<tr><td>COST</td><td>85.98%</td></tr>
+<tr><td>ACN</td><td>81.19%</td></tr>
+<tr><td>SCHW</td><td>80.63%</td></tr>
+<tr><td>ADBE</td><td>79.50%</td></tr>
+<tr><td>AON</td><td>78.19%</td></tr>
+<tr><td>CRM</td><td>77.89%</td></tr>
+<tr><td>JPM</td><td>75.05%</td></tr>
+<tr><td>SBUX</td><td>73.58%</td></tr>
+<tr><td>MS</td><td>66.53%</td></tr>
+<tr><td>CAT</td><td>66.08%</td></tr>
+<tr><td>AXP</td><td>65.00%</td></tr>
+<tr><td>T</td><td>38.98%</td></tr>
+<tr><td>DOGEUSD</td><td>37.00%</td></tr>
+<tr><td>AAPL</td><td>29.25%</td></tr>
+<tr><td>USDJPY</td><td>28.44%</td></tr>
+<tr><td>DIS</td><td>28.03%</td></tr>
+<tr><td>XOM</td><td>27.06%</td></tr>
+<tr><td>LLY</td><td>25.95%</td></tr>
+<tr><td>ICE</td><td>25.93%</td></tr>
+<tr><td>EL</td><td>21.12%</td></tr>
+<tr><td>TJX</td><td>21.01%</td></tr>
+<tr><td>BDX</td><td>18.00%</td></tr>
+<tr><td>HD</td><td>17.50%</td></tr>
+<tr><td>UNH</td><td>14.77%</td></tr>
+<tr><td>CVX</td><td>13.25%</td></tr>
+<tr><td>NIO</td><td>13.10%</td></tr>
+<tr><td>JNJ</td><td>12.84%</td></tr>
+<tr><td>ISRG</td><td>9.03%</td></tr>
+<tr><td>APD</td><td>9.01%</td></tr>
+<tr><td>INTC</td><td>8.26%</td></tr>
+<tr><td>TROW</td><td>7.10%</td></tr>
+<tr><td>MMM</td><td>7.02%</td></tr>
+<tr><td>SYK</td><td>7.00%</td></tr>
+<tr><td>GE</td><td>6.09%</td></tr>
+<tr><td>CSCO</td><td>5.68%</td></tr>
+<tr><td>PLD</td><td>5.38%</td></tr>
+<tr><td>LOW</td><td>5.13%</td></tr>
+<tr><td>MCD</td><td>5.00%</td></tr>
+<tr><td>CI</td><td>4.87%</td></tr>
+<tr><td>C</td><td>4.37%</td></tr>
+<tr><td>CVS</td><td>4.06%</td></tr>
+<tr><td>SPGI</td><td>4.03%</td></tr>
+<tr><td>MRK</td><td>3.24%</td></tr>
+<tr><td>MDLZ</td><td>2.96%</td></tr>
+<tr><td>PSA</td><td>2.70%</td></tr>
+<tr><td>LMT</td><td>2.50%</td></tr>
+<tr><td>DHR</td><td>2.23%</td></tr>
+<tr><td>NSC</td><td>2.18%</td></tr>
+<tr><td>GM</td><td>2.12%</td></tr>
+<tr><td>ITW</td><td>2.09%</td></tr>
+<tr><td>KO</td><td>2.08%</td></tr>
+<tr><td>IBM</td><td>2.00%</td></tr>
+<tr><td>USDCAD</td><td>2.00%</td></tr>
+<tr><td>PFE</td><td>1.54%</td></tr>
+<tr><td>USB</td><td>1.37%</td></tr>
+<tr><td>AEP</td><td>1.34%</td></tr>
+<tr><td>BMY</td><td>1.28%</td></tr>
+<tr><td>CL</td><td>1.21%</td></tr>
+<tr><td>D</td><td>1.17%</td></tr>
+<tr><td>SO</td><td>1.15%</td></tr>
+<tr><td>ABT</td><td>1.04%</td></tr>
+<tr><td>AMGN</td><td>1.03%</td></tr>
+<tr><td>CME</td><td>1.00%</td></tr>
+<tr><td>HON</td><td>1.00%</td></tr>
+<tr><td>TXN</td><td>1.00%</td></tr>
+<tr><td>USDTUSD</td><td>1.00%</td></tr>
+<tr><td>ADP</td><td>0.97%</td></tr>
+<tr><td>PNC</td><td>0.63%</td></tr>
+<tr><td>PEP</td><td>0.57%</td></tr>
+<tr><td>MMC</td><td>0.45%</td></tr>
+<tr><td>DUK</td><td>0.12%</td></tr>
+<tr><td>USDCHF</td><td>0.10%</td></tr>
 </table></body></html>
