--- a/results/classifica.html
+++ b/results/classifica.html
@@ -1,143 +1,123 @@
 <html><head><title>Classifica dei Simboli</title></head><body>
 <h1>Classifica dei Simboli in Base alla Probabilità di Crescita</h1>
 <table border='1'><tr><th>Simbolo</th><th>Probabilità</th></tr>
-<tr><td>LINKUSD</td><td>100.00%</td></tr>
-<tr><td>FIS</td><td>99.98%</td></tr>
-<tr><td>AUDJPY</td><td>99.95%</td></tr>
-<tr><td>INTU</td><td>99.94%</td></tr>
-<tr><td>EURCHF</td><td>99.93%</td></tr>
-<tr><td>GBPCHF</td><td>99.86%</td></tr>
-<tr><td>MSFT</td><td>99.85%</td></tr>
-<tr><td>QCOM</td><td>99.80%</td></tr>
-<tr><td>AUDCAD</td><td>99.70%</td></tr>
-<tr><td>USDCHF</td><td>99.50%</td></tr>
-<tr><td>ETCUSD</td><td>99.31%</td></tr>
-<tr><td>ADAUSD</td><td>99.26%</td></tr>
-<tr><td>XRPUSD</td><td>99.25%</td></tr>
-<tr><td>TMUS</td><td>99.20%</td></tr>
-<tr><td>EURUSD</td><td>99.07%</td></tr>
-<tr><td>CTUSX</td><td>99.06%</td></tr>
-<tr><td>ADBE</td><td>98.99%</td></tr>
-<tr><td>V</td><td>98.97%</td></tr>
-<tr><td>NKE</td><td>98.96%</td></tr>
-<tr><td>PYPL</td><td>98.81%</td></tr>
-<tr><td>ZTS</td><td>98.75%</td></tr>
-<tr><td>FDX</td><td>98.74%</td></tr>
-<tr><td>NZDUSD</td><td>98.59%</td></tr>
-<tr><td>COST</td><td>98.42%</td></tr>
-<tr><td>EOSUSD</td><td>98.31%</td></tr>
-<tr><td>TRXUSD</td><td>98.30%</td></tr>
-<tr><td>ATOMUSD</td><td>98.29%</td></tr>
-<tr><td>SCHW</td><td>98.00%</td></tr>
-<tr><td>EURCAD</td><td>97.90%</td></tr>
-<tr><td>BCHUSD</td><td>97.80%</td></tr>
-<tr><td>TSLA</td><td>97.79%</td></tr>
-<tr><td>WMT</td><td>97.72%</td></tr>
-<tr><td>ADI</td><td>97.72%</td></tr>
-<tr><td>SBUX</td><td>97.64%</td></tr>
-<tr><td>GOOGL</td><td>97.63%</td></tr>
-<tr><td>AUDUSD</td><td>97.61%</td></tr>
-<tr><td>TGT</td><td>97.55%</td></tr>
-<tr><td>ACN</td><td>97.41%</td></tr>
-<tr><td>EW</td><td>97.14%</td></tr>
-<tr><td>XMRUSD</td><td>97.03%</td></tr>
-<tr><td>DASHUSD</td><td>97.02%</td></tr>
-<tr><td>CAT</td><td>97.01%</td></tr>
-<tr><td>DE</td><td>97.01%</td></tr>
-<tr><td>NEOUSD</td><td>96.95%</td></tr>
-<tr><td>META</td><td>96.66%</td></tr>
-<tr><td>LTCUSD</td><td>96.64%</td></tr>
-<tr><td>AXP</td><td>96.58%</td></tr>
-<tr><td>LNTH</td><td>96.50%</td></tr>
-<tr><td>ETHUSD</td><td>96.46%</td></tr>
-<tr><td>XTZUSD</td><td>96.42%</td></tr>
-<tr><td>USDCAD</td><td>96.42%</td></tr>
-<tr><td>JPM</td><td>96.17%</td></tr>
-<tr><td>NVDA</td><td>96.07%</td></tr>
-<tr><td>NRG</td><td>96.06%</td></tr>
-<tr><td>AON</td><td>96.03%</td></tr>
-<tr><td>EURGBP</td><td>95.40%</td></tr>
-<tr><td>GS</td><td>95.21%</td></tr>
-<tr><td>MS</td><td>95.20%</td></tr>
-<tr><td>ORCL</td><td>94.08%</td></tr>
-<tr><td>BNBUSD</td><td>92.98%</td></tr>
-<tr><td>BKNG</td><td>92.71%</td></tr>
-<tr><td>ZECUSD</td><td>92.30%</td></tr>
-<tr><td>AMZN</td><td>91.21%</td></tr>
-<tr><td>NOW</td><td>90.43%</td></tr>
-<tr><td>NFLX</td><td>86.84%</td></tr>
-<tr><td>BTDR</td><td>86.61%</td></tr>
-<tr><td>CRM</td><td>83.40%</td></tr>
-<tr><td>BTCUSD</td><td>11.78%</td></tr>
-<tr><td>TJX</td><td>10.80%</td></tr>
-<tr><td>AAPL</td><td>7.99%</td></tr>
-<tr><td>XLMUSD</td><td>6.96%</td></tr>
-<tr><td>GBPJPY</td><td>5.52%</td></tr>
-<tr><td>GBPJPY</td><td>5.52%</td></tr>
-<tr><td>RBUSD</td><td>5.34%</td></tr>
-<tr><td>ICE</td><td>5.08%</td></tr>
-<tr><td>ADP</td><td>4.68%</td></tr>
-<tr><td>OJUSX</td><td>4.55%</td></tr>
-<tr><td>USB</td><td>4.39%</td></tr>
-<tr><td>CCUSD</td><td>4.03%</td></tr>
-<tr><td>XAUUSD</td><td>3.99%</td></tr>
-<tr><td>LMT</td><td>3.82%</td></tr>
-<tr><td>EL</td><td>3.76%</td></tr>
-<tr><td>LLY</td><td>3.67%</td></tr>
-<tr><td>PFE</td><td>3.59%</td></tr>
-<tr><td>D</td><td>3.58%</td></tr>
-<tr><td>SO</td><td>3.57%</td></tr>
-<tr><td>BDX</td><td>3.53%</td></tr>
-<tr><td>ZCUSX</td><td>3.52%</td></tr>
-<tr><td>T</td><td>3.29%</td></tr>
-<tr><td>LOW</td><td>3.05%</td></tr>
-<tr><td>CADJPY</td><td>3.01%</td></tr>
-<tr><td>DIS</td><td>2.97%</td></tr>
-<tr><td>ZSUSX</td><td>2.92%</td></tr>
-<tr><td>EURJPY</td><td>2.83%</td></tr>
-<tr><td>CVS</td><td>2.45%</td></tr>
-<tr><td>ITW</td><td>2.29%</td></tr>
-<tr><td>KO</td><td>2.28%</td></tr>
-<tr><td>GCUSD</td><td>2.19%</td></tr>
-<tr><td>CHFJPY</td><td>2.12%</td></tr>
-<tr><td>IBM</td><td>1.96%</td></tr>
-<tr><td>SYK</td><td>1.83%</td></tr>
-<tr><td>USDJPY</td><td>1.79%</td></tr>
-<tr><td>NIO</td><td>1.77%</td></tr>
-<tr><td>GM</td><td>1.39%</td></tr>
-<tr><td>AMGN</td><td>1.12%</td></tr>
-<tr><td>DOGEUSD</td><td>1.07%</td></tr>
-<tr><td>SCHL</td><td>0.96%</td></tr>
-<tr><td>CME</td><td>0.87%</td></tr>
-<tr><td>PNC</td><td>0.86%</td></tr>
-<tr><td>TROW</td><td>0.84%</td></tr>
-<tr><td>GE</td><td>0.83%</td></tr>
-<tr><td>XAGUSD</td><td>0.82%</td></tr>
-<tr><td>INTC</td><td>0.80%</td></tr>
-<tr><td>HD</td><td>0.77%</td></tr>
-<tr><td>CSCO</td><td>0.75%</td></tr>
-<tr><td>MRK</td><td>0.74%</td></tr>
-<tr><td>MCD</td><td>0.67%</td></tr>
-<tr><td>PEP</td><td>0.67%</td></tr>
-<tr><td>EURNZD</td><td>0.62%</td></tr>
-<tr><td>GBPUSD</td><td>0.56%</td></tr>
-<tr><td>AEP</td><td>0.51%</td></tr>
-<tr><td>C</td><td>0.50%</td></tr>
-<tr><td>MMC</td><td>0.48%</td></tr>
-<tr><td>CL</td><td>0.46%</td></tr>
-<tr><td>APD</td><td>0.45%</td></tr>
-<tr><td>DUK</td><td>0.44%</td></tr>
-<tr><td>HON</td><td>0.39%</td></tr>
-<tr><td>EURAUD</td><td>0.36%</td></tr>
-<tr><td>CVX</td><td>0.31%</td></tr>
-<tr><td>XOM</td><td>0.29%</td></tr>
-<tr><td>BMY</td><td>0.28%</td></tr>
-<tr><td>NAAS</td><td>0.27%</td></tr>
-<tr><td>PLD</td><td>0.24%</td></tr>
-<tr><td>ABT</td><td>0.18%</td></tr>
-<tr><td>PSA</td><td>0.10%</td></tr>
-<tr><td>HE</td><td>0.04%</td></tr>
-<tr><td>JNJ</td><td>0.04%</td></tr>
-<tr><td>NSC</td><td>0.01%</td></tr>
-<tr><td>USDTUSD</td><td>0.00%</td></tr>
+<tr><td>INTU</td><td>100.00%</td></tr>
+<tr><td>MSFT</td><td>100.00%</td></tr>
+<tr><td>WMT</td><td>100.00%</td></tr>
+<tr><td>NOW</td><td>99.97%</td></tr>
+<tr><td>BRK.A</td><td>99.97%</td></tr>
+<tr><td>MDT</td><td>99.96%</td></tr>
+<tr><td>NEE</td><td>99.95%</td></tr>
+<tr><td>TMUS</td><td>99.80%</td></tr>
+<tr><td>DASHUSD</td><td>99.50%</td></tr>
+<tr><td>MO</td><td>99.48%</td></tr>
+<tr><td>ETCUSD</td><td>99.40%</td></tr>
+<tr><td>NKE</td><td>99.29%</td></tr>
+<tr><td>AMZN</td><td>99.00%</td></tr>
+<tr><td>AUDUSD</td><td>99.00%</td></tr>
+<tr><td>NZDUSD</td><td>98.98%</td></tr>
+<tr><td>USDCHF</td><td>98.97%</td></tr>
+<tr><td>FIS</td><td>98.89%</td></tr>
+<tr><td>QCOM</td><td>98.82%</td></tr>
+<tr><td>BNBUSD</td><td>98.50%</td></tr>
+<tr><td>BLK</td><td>97.97%</td></tr>
+<tr><td>VZ</td><td>97.90%</td></tr>
+<tr><td>ORCL</td><td>97.75%</td></tr>
+<tr><td>META</td><td>97.66%</td></tr>
+<tr><td>BKNG</td><td>97.50%</td></tr>
+<tr><td>ANTM</td><td>97.35%</td></tr>
+<tr><td>EURGBP</td><td>97.00%</td></tr>
+<tr><td>NFLX</td><td>97.00%</td></tr>
+<tr><td>NVDA</td><td>96.92%</td></tr>
+<tr><td>PYPL</td><td>96.87%</td></tr>
+<tr><td>TGT</td><td>96.73%</td></tr>
+<tr><td>ZTS</td><td>96.44%</td></tr>
+<tr><td>GS</td><td>96.13%</td></tr>
+<tr><td>GOOGL</td><td>94.50%</td></tr>
+<tr><td>TSLA</td><td>94.44%</td></tr>
+<tr><td>BA</td><td>93.77%</td></tr>
+<tr><td>USDCAD</td><td>92.95%</td></tr>
+<tr><td>NRG</td><td>92.79%</td></tr>
+<tr><td>DE</td><td>91.38%</td></tr>
+<tr><td>EW</td><td>90.22%</td></tr>
+<tr><td>V</td><td>89.22%</td></tr>
+<tr><td>FDX</td><td>88.46%</td></tr>
+<tr><td>COST</td><td>87.23%</td></tr>
+<tr><td>PM</td><td>83.84%</td></tr>
+<tr><td>JPM</td><td>81.84%</td></tr>
+<tr><td>SCHW</td><td>81.26%</td></tr>
+<tr><td>ADI</td><td>80.84%</td></tr>
+<tr><td>ADBE</td><td>79.46%</td></tr>
+<tr><td>AON</td><td>78.24%</td></tr>
+<tr><td>CAT</td><td>76.26%</td></tr>
+<tr><td>SBUX</td><td>75.05%</td></tr>
+<tr><td>MS</td><td>74.38%</td></tr>
+<tr><td>CRM</td><td>73.28%</td></tr>
+<tr><td>ACN</td><td>71.20%</td></tr>
+<tr><td>EURUSD</td><td>70.00%</td></tr>
+<tr><td>AXP</td><td>67.66%</td></tr>
+<tr><td>XMRUSD</td><td>65.00%</td></tr>
+<tr><td>ZECUSD</td><td>63.02%</td></tr>
+<tr><td>DIS</td><td>28.86%</td></tr>
+<tr><td>AAPL</td><td>28.00%</td></tr>
+<tr><td>LLY</td><td>27.94%</td></tr>
+<tr><td>T</td><td>27.68%</td></tr>
+<tr><td>XOM</td><td>21.94%</td></tr>
+<tr><td>EL</td><td>20.58%</td></tr>
+<tr><td>UNH</td><td>19.00%</td></tr>
+<tr><td>ICE</td><td>17.22%</td></tr>
+<tr><td>TJX</td><td>17.15%</td></tr>
+<tr><td>BDX</td><td>15.61%</td></tr>
+<tr><td>NIO</td><td>14.17%</td></tr>
+<tr><td>HD</td><td>13.50%</td></tr>
+<tr><td>JNJ</td><td>12.78%</td></tr>
+<tr><td>SYK</td><td>12.50%</td></tr>
+<tr><td>CVX</td><td>10.61%</td></tr>
+<tr><td>INTC</td><td>9.39%</td></tr>
+<tr><td>MMM</td><td>7.58%</td></tr>
+<tr><td>GBPJPY</td><td>7.50%</td></tr>
+<tr><td>ISRG</td><td>7.00%</td></tr>
+<tr><td>APD</td><td>6.63%</td></tr>
+<tr><td>CSCO</td><td>6.36%</td></tr>
+<tr><td>KO</td><td>5.56%</td></tr>
+<tr><td>TROW</td><td>5.50%</td></tr>
+<tr><td>DHR</td><td>5.08%</td></tr>
+<tr><td>GBPUSD</td><td>5.00%</td></tr>
+<tr><td>LOW</td><td>3.82%</td></tr>
+<tr><td>PLD</td><td>3.73%</td></tr>
+<tr><td>GE</td><td>3.57%</td></tr>
+<tr><td>PSA</td><td>3.50%</td></tr>
+<tr><td>DOGEUSD</td><td>3.50%</td></tr>
+<tr><td>CI</td><td>3.24%</td></tr>
+<tr><td>EURJPY</td><td>3.00%</td></tr>
+<tr><td>MCD</td><td>3.00%</td></tr>
+<tr><td>LMT</td><td>2.72%</td></tr>
+<tr><td>SPGI</td><td>2.53%</td></tr>
+<tr><td>ITW</td><td>2.06%</td></tr>
+<tr><td>AMGN</td><td>1.82%</td></tr>
+<tr><td>GM</td><td>1.72%</td></tr>
+<tr><td>PNC</td><td>1.67%</td></tr>
+<tr><td>MMC</td><td>1.62%</td></tr>
+<tr><td>SO</td><td>1.55%</td></tr>
+<tr><td>NSC</td><td>1.55%</td></tr>
+<tr><td>HON</td><td>1.54%</td></tr>
+<tr><td>TXN</td><td>1.51%</td></tr>
+<tr><td>CVS</td><td>1.50%</td></tr>
+<tr><td>PFE</td><td>1.50%</td></tr>
+<tr><td>MRK</td><td>1.49%</td></tr>
+<tr><td>USB</td><td>1.43%</td></tr>
+<tr><td>C</td><td>1.41%</td></tr>
+<tr><td>CL</td><td>1.09%</td></tr>
+<tr><td>IBM</td><td>1.00%</td></tr>
+<tr><td>USDTUSD</td><td>1.00%</td></tr>
+<tr><td>DUK</td><td>0.94%</td></tr>
+<tr><td>AEP</td><td>0.87%</td></tr>
+<tr><td>ABT</td><td>0.55%</td></tr>
+<tr><td>ADP</td><td>0.54%</td></tr>
+<tr><td>CME</td><td>0.50%</td></tr>
+<tr><td>USDJPY</td><td>0.50%</td></tr>
+<tr><td>MDLZ</td><td>0.20%</td></tr>
+<tr><td>PEP</td><td>0.14%</td></tr>
+<tr><td>BMY</td><td>0.10%</td></tr>
+<tr><td>D</td><td>0.09%</td></tr>
 </table></body></html>
