--- a/results/classifica.html
+++ b/results/classifica.html
@@ -1,143 +1,123 @@
 <html><head><title>Classifica dei Simboli</title></head><body>
 <h1>Classifica dei Simboli in Base alla Probabilità di Crescita</h1>
 <table border='1'><tr><th>Simbolo</th><th>Probabilità</th></tr>
-<tr><td>CVX</td><td>99.99%</td></tr>
-<tr><td>NVDA</td><td>99.98%</td></tr>
-<tr><td>XOM</td><td>99.97%</td></tr>
-<tr><td>USDJPY</td><td>99.95%</td></tr>
-<tr><td>DIS</td><td>99.95%</td></tr>
-<tr><td>INTU</td><td>99.95%</td></tr>
-<tr><td>BMY</td><td>99.93%</td></tr>
-<tr><td>GBPCHF</td><td>99.93%</td></tr>
-<tr><td>PLD</td><td>99.93%</td></tr>
-<tr><td>LMT</td><td>99.91%</td></tr>
-<tr><td>EURAUD</td><td>99.84%</td></tr>
-<tr><td>BTDR</td><td>99.84%</td></tr>
-<tr><td>USDCAD</td><td>99.83%</td></tr>
-<tr><td>LNTH</td><td>99.81%</td></tr>
-<tr><td>FDX</td><td>99.79%</td></tr>
-<tr><td>USDCHF</td><td>99.78%</td></tr>
-<tr><td>SO</td><td>99.76%</td></tr>
-<tr><td>CVS</td><td>99.75%</td></tr>
-<tr><td>PNC</td><td>99.75%</td></tr>
-<tr><td>SCHL</td><td>99.70%</td></tr>
-<tr><td>MMC</td><td>99.68%</td></tr>
-<tr><td>PFE</td><td>99.64%</td></tr>
-<tr><td>EURJPY</td><td>99.63%</td></tr>
-<tr><td>TSLA</td><td>99.63%</td></tr>
-<tr><td>MRK</td><td>99.62%</td></tr>
-<tr><td>BTCUSD</td><td>99.60%</td></tr>
-<tr><td>BCHUSD</td><td>99.58%</td></tr>
-<tr><td>ITW</td><td>99.52%</td></tr>
-<tr><td>EURCHF</td><td>99.52%</td></tr>
-<tr><td>ETHUSD</td><td>99.50%</td></tr>
-<tr><td>TROW</td><td>99.48%</td></tr>
-<tr><td>HON</td><td>99.47%</td></tr>
-<tr><td>USDTUSD</td><td>99.42%</td></tr>
-<tr><td>JNJ</td><td>99.40%</td></tr>
-<tr><td>LOW</td><td>99.40%</td></tr>
-<tr><td>XLMUSD</td><td>99.37%</td></tr>
-<tr><td>USB</td><td>99.34%</td></tr>
-<tr><td>ATOMUSD</td><td>99.26%</td></tr>
-<tr><td>GM</td><td>99.24%</td></tr>
-<tr><td>EURNZD</td><td>99.23%</td></tr>
-<tr><td>NSC</td><td>99.19%</td></tr>
-<tr><td>ZTS</td><td>99.16%</td></tr>
-<tr><td>APD</td><td>99.14%</td></tr>
-<tr><td>DE</td><td>99.03%</td></tr>
-<tr><td>EW</td><td>99.03%</td></tr>
-<tr><td>AXP</td><td>99.02%</td></tr>
-<tr><td>ADP</td><td>99.01%</td></tr>
-<tr><td>LLY</td><td>99.00%</td></tr>
-<tr><td>GBPJPY</td><td>98.98%</td></tr>
-<tr><td>GBPJPY</td><td>98.98%</td></tr>
-<tr><td>CHFJPY</td><td>98.98%</td></tr>
-<tr><td>FIS</td><td>98.89%</td></tr>
-<tr><td>AON</td><td>98.88%</td></tr>
-<tr><td>AAPL</td><td>98.88%</td></tr>
-<tr><td>ZECUSD</td><td>98.85%</td></tr>
-<tr><td>SCHW</td><td>98.77%</td></tr>
-<tr><td>ETCUSD</td><td>98.64%</td></tr>
-<tr><td>META</td><td>98.62%</td></tr>
-<tr><td>QCOM</td><td>98.59%</td></tr>
-<tr><td>HE</td><td>98.54%</td></tr>
-<tr><td>INTC</td><td>98.49%</td></tr>
-<tr><td>D</td><td>98.47%</td></tr>
-<tr><td>XRPUSD</td><td>98.44%</td></tr>
-<tr><td>V</td><td>98.43%</td></tr>
-<tr><td>OJUSX</td><td>98.43%</td></tr>
-<tr><td>SBUX</td><td>98.31%</td></tr>
-<tr><td>HD</td><td>98.29%</td></tr>
-<tr><td>CL</td><td>98.29%</td></tr>
-<tr><td>PYPL</td><td>98.25%</td></tr>
-<tr><td>ICE</td><td>98.19%</td></tr>
-<tr><td>XMRUSD</td><td>98.10%</td></tr>
-<tr><td>CADJPY</td><td>98.10%</td></tr>
-<tr><td>TGT</td><td>97.99%</td></tr>
-<tr><td>MSFT</td><td>97.92%</td></tr>
-<tr><td>JPM</td><td>97.91%</td></tr>
-<tr><td>GS</td><td>97.91%</td></tr>
-<tr><td>ORCL</td><td>97.79%</td></tr>
-<tr><td>PEP</td><td>97.72%</td></tr>
-<tr><td>BDX</td><td>97.67%</td></tr>
-<tr><td>DUK</td><td>97.66%</td></tr>
-<tr><td>ADBE</td><td>97.64%</td></tr>
-<tr><td>WMT</td><td>97.64%</td></tr>
-<tr><td>TJX</td><td>97.63%</td></tr>
-<tr><td>MS</td><td>97.50%</td></tr>
-<tr><td>GE</td><td>97.44%</td></tr>
-<tr><td>ADI</td><td>97.30%</td></tr>
-<tr><td>CME</td><td>97.29%</td></tr>
-<tr><td>CAT</td><td>97.26%</td></tr>
-<tr><td>BKNG</td><td>97.25%</td></tr>
-<tr><td>NEOUSD</td><td>97.10%</td></tr>
-<tr><td>AMGN</td><td>97.04%</td></tr>
-<tr><td>ADAUSD</td><td>97.01%</td></tr>
-<tr><td>T</td><td>96.85%</td></tr>
-<tr><td>TMUS</td><td>96.82%</td></tr>
-<tr><td>DASHUSD</td><td>96.72%</td></tr>
-<tr><td>ABT</td><td>96.72%</td></tr>
-<tr><td>AMZN</td><td>96.67%</td></tr>
-<tr><td>BNBUSD</td><td>96.44%</td></tr>
-<tr><td>XTZUSD</td><td>96.42%</td></tr>
-<tr><td>NRG</td><td>96.32%</td></tr>
-<tr><td>TRXUSD</td><td>96.11%</td></tr>
-<tr><td>GOOGL</td><td>96.05%</td></tr>
-<tr><td>AEP</td><td>95.83%</td></tr>
-<tr><td>NOW</td><td>95.74%</td></tr>
-<tr><td>AUDCAD</td><td>95.74%</td></tr>
-<tr><td>EURCAD</td><td>95.63%</td></tr>
-<tr><td>CRM</td><td>95.63%</td></tr>
-<tr><td>CSCO</td><td>95.48%</td></tr>
-<tr><td>C</td><td>95.43%</td></tr>
-<tr><td>KO</td><td>94.94%</td></tr>
-<tr><td>AUDJPY</td><td>94.94%</td></tr>
-<tr><td>XAGUSD</td><td>94.87%</td></tr>
-<tr><td>GBPUSD</td><td>94.73%</td></tr>
-<tr><td>EOSUSD</td><td>94.60%</td></tr>
-<tr><td>DOGEUSD</td><td>94.15%</td></tr>
-<tr><td>EURUSD</td><td>93.37%</td></tr>
-<tr><td>XAUUSD</td><td>92.44%</td></tr>
-<tr><td>NFLX</td><td>92.23%</td></tr>
-<tr><td>EURGBP</td><td>92.12%</td></tr>
-<tr><td>NAAS</td><td>91.18%</td></tr>
-<tr><td>ZCUSX</td><td>91.08%</td></tr>
-<tr><td>COST</td><td>90.37%</td></tr>
-<tr><td>CCUSD</td><td>5.42%</td></tr>
-<tr><td>NIO</td><td>4.26%</td></tr>
-<tr><td>MCD</td><td>3.06%</td></tr>
-<tr><td>RBUSD</td><td>3.04%</td></tr>
-<tr><td>NKE</td><td>3.03%</td></tr>
-<tr><td>EL</td><td>2.29%</td></tr>
-<tr><td>ZSUSX</td><td>1.61%</td></tr>
-<tr><td>IBM</td><td>1.40%</td></tr>
-<tr><td>LINKUSD</td><td>1.19%</td></tr>
-<tr><td>LTCUSD</td><td>0.96%</td></tr>
-<tr><td>SYK</td><td>0.85%</td></tr>
-<tr><td>PSA</td><td>0.76%</td></tr>
-<tr><td>NZDUSD</td><td>0.64%</td></tr>
-<tr><td>AUDUSD</td><td>0.48%</td></tr>
-<tr><td>GCUSD</td><td>0.12%</td></tr>
-<tr><td>ACN</td><td>0.07%</td></tr>
-<tr><td>CTUSX</td><td>0.01%</td></tr>
+<tr><td>BLK</td><td>100.00%</td></tr>
+<tr><td>EURJPY</td><td>100.00%</td></tr>
+<tr><td>GBPJPY</td><td>100.00%</td></tr>
+<tr><td>USDTUSD</td><td>100.00%</td></tr>
+<tr><td>ZECUSD</td><td>99.98%</td></tr>
+<tr><td>USDCHF</td><td>99.98%</td></tr>
+<tr><td>AMZN</td><td>99.96%</td></tr>
+<tr><td>MO</td><td>99.88%</td></tr>
+<tr><td>BRK.A</td><td>99.81%</td></tr>
+<tr><td>FIS</td><td>99.80%</td></tr>
+<tr><td>INTC</td><td>99.74%</td></tr>
+<tr><td>MDT</td><td>99.53%</td></tr>
+<tr><td>ANTM</td><td>99.50%</td></tr>
+<tr><td>ITW</td><td>99.50%</td></tr>
+<tr><td>USDCAD</td><td>99.50%</td></tr>
+<tr><td>USDJPY</td><td>99.50%</td></tr>
+<tr><td>WMT</td><td>99.50%</td></tr>
+<tr><td>XMRUSD</td><td>99.50%</td></tr>
+<tr><td>ETCUSD</td><td>99.50%</td></tr>
+<tr><td>ADI</td><td>99.49%</td></tr>
+<tr><td>TSLA</td><td>99.46%</td></tr>
+<tr><td>ABT</td><td>99.45%</td></tr>
+<tr><td>TGT</td><td>99.44%</td></tr>
+<tr><td>GE</td><td>99.42%</td></tr>
+<tr><td>META</td><td>99.40%</td></tr>
+<tr><td>AON</td><td>99.39%</td></tr>
+<tr><td>SBUX</td><td>99.27%</td></tr>
+<tr><td>NEE</td><td>99.16%</td></tr>
+<tr><td>SO</td><td>99.00%</td></tr>
+<tr><td>VZ</td><td>99.00%</td></tr>
+<tr><td>CME</td><td>98.96%</td></tr>
+<tr><td>PNC</td><td>98.50%</td></tr>
+<tr><td>TROW</td><td>98.50%</td></tr>
+<tr><td>LLY</td><td>98.44%</td></tr>
+<tr><td>APD</td><td>98.43%</td></tr>
+<tr><td>TMUS</td><td>98.43%</td></tr>
+<tr><td>FDX</td><td>98.39%</td></tr>
+<tr><td>BKNG</td><td>98.27%</td></tr>
+<tr><td>DIS</td><td>98.17%</td></tr>
+<tr><td>QCOM</td><td>98.14%</td></tr>
+<tr><td>COST</td><td>98.00%</td></tr>
+<tr><td>V</td><td>98.00%</td></tr>
+<tr><td>GOOGL</td><td>97.93%</td></tr>
+<tr><td>AXP</td><td>97.91%</td></tr>
+<tr><td>LMT</td><td>97.83%</td></tr>
+<tr><td>ZTS</td><td>97.67%</td></tr>
+<tr><td>NVDA</td><td>97.54%</td></tr>
+<tr><td>CVS</td><td>97.50%</td></tr>
+<tr><td>ORCL</td><td>97.45%</td></tr>
+<tr><td>AAPL</td><td>97.13%</td></tr>
+<tr><td>NRG</td><td>97.00%</td></tr>
+<tr><td>MS</td><td>96.97%</td></tr>
+<tr><td>PFE</td><td>96.95%</td></tr>
+<tr><td>GS</td><td>96.80%</td></tr>
+<tr><td>CVX</td><td>96.39%</td></tr>
+<tr><td>DE</td><td>96.38%</td></tr>
+<tr><td>USB</td><td>96.07%</td></tr>
+<tr><td>JPM</td><td>95.51%</td></tr>
+<tr><td>DASHUSD</td><td>95.50%</td></tr>
+<tr><td>PLD</td><td>95.48%</td></tr>
+<tr><td>MRK</td><td>95.22%</td></tr>
+<tr><td>GM</td><td>95.14%</td></tr>
+<tr><td>INTU</td><td>95.14%</td></tr>
+<tr><td>CAT</td><td>94.97%</td></tr>
+<tr><td>BMY</td><td>94.82%</td></tr>
+<tr><td>XOM</td><td>94.55%</td></tr>
+<tr><td>LOW</td><td>94.40%</td></tr>
+<tr><td>NOW</td><td>94.29%</td></tr>
+<tr><td>DUK</td><td>93.79%</td></tr>
+<tr><td>CRM</td><td>93.72%</td></tr>
+<tr><td>NSC</td><td>93.09%</td></tr>
+<tr><td>T</td><td>92.47%</td></tr>
+<tr><td>SCHW</td><td>92.32%</td></tr>
+<tr><td>BA</td><td>91.27%</td></tr>
+<tr><td>PYPL</td><td>90.91%</td></tr>
+<tr><td>BDX</td><td>90.69%</td></tr>
+<tr><td>D</td><td>90.42%</td></tr>
+<tr><td>ADBE</td><td>89.85%</td></tr>
+<tr><td>MSFT</td><td>89.50%</td></tr>
+<tr><td>TJX</td><td>89.37%</td></tr>
+<tr><td>JNJ</td><td>89.22%</td></tr>
+<tr><td>NFLX</td><td>89.10%</td></tr>
+<tr><td>MMC</td><td>89.00%</td></tr>
+<tr><td>ADP</td><td>87.86%</td></tr>
+<tr><td>HD</td><td>86.69%</td></tr>
+<tr><td>ICE</td><td>86.00%</td></tr>
+<tr><td>HON</td><td>85.29%</td></tr>
+<tr><td>EW</td><td>84.68%</td></tr>
+<tr><td>AEP</td><td>84.03%</td></tr>
+<tr><td>PM</td><td>82.89%</td></tr>
+<tr><td>C</td><td>81.98%</td></tr>
+<tr><td>CL</td><td>81.45%</td></tr>
+<tr><td>CSCO</td><td>80.56%</td></tr>
+<tr><td>PEP</td><td>74.78%</td></tr>
+<tr><td>AMGN</td><td>67.26%</td></tr>
+<tr><td>KO</td><td>67.00%</td></tr>
+<tr><td>BNBUSD</td><td>65.50%</td></tr>
+<tr><td>EURUSD</td><td>64.00%</td></tr>
+<tr><td>EURGBP</td><td>63.50%</td></tr>
+<tr><td>GBPUSD</td><td>63.31%</td></tr>
+<tr><td>DOGEUSD</td><td>60.23%</td></tr>
+<tr><td>IBM</td><td>36.45%</td></tr>
+<tr><td>MCD</td><td>31.50%</td></tr>
+<tr><td>NIO</td><td>27.21%</td></tr>
+<tr><td>NKE</td><td>26.03%</td></tr>
+<tr><td>EL</td><td>12.84%</td></tr>
+<tr><td>UNH</td><td>12.21%</td></tr>
+<tr><td>SYK</td><td>9.56%</td></tr>
+<tr><td>ISRG</td><td>9.17%</td></tr>
+<tr><td>PSA</td><td>8.47%</td></tr>
+<tr><td>MMM</td><td>6.88%</td></tr>
+<tr><td>CI</td><td>5.68%</td></tr>
+<tr><td>DHR</td><td>4.23%</td></tr>
+<tr><td>TXN</td><td>2.53%</td></tr>
+<tr><td>ACN</td><td>2.01%</td></tr>
+<tr><td>SPGI</td><td>1.79%</td></tr>
+<tr><td>MDLZ</td><td>0.55%</td></tr>
+<tr><td>AUDUSD</td><td>0.00%</td></tr>
+<tr><td>NZDUSD</td><td>0.00%</td></tr>
 </table></body></html>
